src/mpfr.rs

    pub fn mpfr_lgamma(arg1: mpfr_ptr, arg2: *mut ::std::os::raw::c_int,
                       arg3: mpfr_srcptr, arg4: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_digamma(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_zeta(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_zeta_ui(arg1: mpfr_ptr, arg2: ::std::os::raw::c_ulong,
                        arg3: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_fac_ui(arg1: mpfr_ptr, arg2: ::std::os::raw::c_ulong,
                       arg3: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_j0(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_j1(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_jn(arg1: mpfr_ptr, arg2: ::std::os::raw::c_long,
                   arg3: mpfr_srcptr, arg4: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_y0(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_y1(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_yn(arg1: mpfr_ptr, arg2: ::std::os::raw::c_long,
                   arg3: mpfr_srcptr, arg4: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_ai(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_min(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_srcptr,
                    arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_max(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_srcptr,
                    arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_dim(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_srcptr,
                    arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_mul_z(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpz_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_div_z(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpz_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_add_z(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpz_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_sub_z(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpz_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_z_sub(arg1: mpfr_ptr, arg2: mpz_srcptr, arg3: mpfr_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_cmp_z(arg1: mpfr_srcptr, arg2: mpz_srcptr)
     -> ::std::os::raw::c_int;
    pub fn mpfr_mul_q(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpq_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_div_q(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpq_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_add_q(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpq_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_sub_q(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpq_srcptr,
                      arg4: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_cmp_q(arg1: mpfr_srcptr, arg2: mpq_srcptr)
     -> ::std::os::raw::c_int;
    pub fn mpfr_cmp_f(arg1: mpfr_srcptr, arg2: mpf_srcptr)
     -> ::std::os::raw::c_int;
    pub fn mpfr_fma(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_srcptr,
                    arg4: mpfr_srcptr, arg5: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_fms(arg1: mpfr_ptr, arg2: mpfr_srcptr, arg3: mpfr_srcptr,
                    arg4: mpfr_srcptr, arg5: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_sum(arg1: mpfr_ptr, arg2: *mut mpfr_ptr,
                    arg3: ::std::os::raw::c_ulong, arg4: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_free_cache();
    pub fn mpfr_subnormalize(arg1: mpfr_ptr, arg2: ::std::os::raw::c_int,
                             arg3: mpfr_rnd_t) -> ::std::os::raw::c_int;
    pub fn mpfr_strtofr(arg1: mpfr_ptr, arg2: *const ::std::os::raw::c_char,
                        arg3: *mut *mut ::std::os::raw::c_char,
                        arg4: ::std::os::raw::c_int, arg5: mpfr_rnd_t)
     -> ::std::os::raw::c_int;
    pub fn mpfr_custom_get_size(arg1: mpfr_prec_t) -> size_t;
    pub fn mpfr_custom_init(arg1: *mut ::std::os::raw::c_void,
                            arg2: mpfr_prec_t);
    pub fn mpfr_custom_get_significand(arg1: mpfr_srcptr)
     -> *mut ::std::os::raw::c_void;
    pub fn mpfr_custom_get_exp(arg1: mpfr_srcptr) -> mpfr_exp_t;
    pub fn mpfr_custom_move(arg1: mpfr_ptr,
                            arg2: *mut ::std::os::raw::c_void);
    pub fn mpfr_custom_init_set(arg1: mpfr_ptr, arg2: ::std::os::raw::c_int,
                                arg3: mpfr_exp_t, arg4: mpfr_prec_t,
                                arg5: *mut ::std::os::raw::c_void);
    pub fn mpfr_custom_get_kind(arg1: mpfr_srcptr) -> ::std::os::raw::c_int;
}
